# kurs_cpp_lato_2019

./: .gitignore  README.md
L01-programmers-tools/: 06.07.2019_history.txt  README.md
L02-C++-introduction/: README.md  long_int.cpp  palindrom.cpp  palindrom_recursive.cpp
L03-object-oriented-cpp/: README.md  post-test.txt  pre-test.txt
L04-stl/: README.md  bowling.txt  exercise4.cpp  exercise6.cpp  exercise9.cpp
L05-testing/: README.md  parentheses.txt
L06-memory-management/: README.md  post-test.txt  pre-test.txt
L07-modern-cpp/: README.md  post-test.txt
L07-modern-cpp/exercises/: CMakeLists.txt
L07-modern-cpp/exercises/1-file-reader/: main.cpp
L07-modern-cpp/exercises/2-zip-file-reader/: main.cpp
L08-refactoring-dojo/: README.md
L09-templates-patterns/: README.md
L10-repetition/: README.md
cheatsheets/: 02_keywords.txt  C++ keywords.md  L04_algorithm.md
project/: README.md
